# dcf

./: Introduction.py  financial_statements.py  main.py  pyproject.toml  set_api.py  test.py
data/: balance_sheet_statements.csv  betas.csv  capital_structure.csv  cash_flow_statements.csv  cost_of_debt.csv  growth_forecast.csv  income_statements.csv  market_caps.csv
scripts/: capital_structure.py  cost_of_debt.py  download_financial_statements.py  estimates_betas.py  fcff.py  growth.py  market_caps.py
