[project]
name = "dcf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "fmpapi>=0.1.2",
    "mizani>=0.14.2",
    "pandas>=2.3.1",
    "pandas-datareader>=0.10.0",
    "plotly>=6.2.0",
    "plotnine>=0.15.0",
    "polars>=1.32.2",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "streamlit>=1.48.0",
    "tidyfinance>=0.1.2",
    "yfinance>=0.2.65",
]
